--- a/html/assets/css/page/kanjiPage.css
+++ b/html/assets/css/page/kanjiPage.css
@@ -32,3 +32,135 @@
     width: 63%;
     padding-right: 10%;
 }
+
+.kun-reading {
+    padding-left: 10px;
+}
+
+@media only screen and (max-width: 600px) {
+
+    .compounds-parent {
+        flex-direction: column!important;
+    }
+
+    .kun-reading {
+        padding-left: 0px;
+        padding-top: 20px;
+    }
+
+    .main-container > .d-flex {
+		flex-direction: column;
+	}
+
+	.kanji-entry.left.detail {
+        width: 100%;
+		align-self: center;
+		padding-left: 0px;
+	}
+	
+	.kanji-preview.x-large {
+		align-self: center;
+	}
+
+    .translation.big {
+        font-size: 20px;
+        padding-bottom: 10px;
+    }
+	
+	.kanji-preview-info {
+		padding-left: 0px;
+        text-align: left;
+	}
+	
+	.kanji-entry.right.detail {
+		width: unset;
+		padding-left: 0px;
+	}
+	
+	.kanji-entry.right.detail > .kanji-entry {
+		flex-direction: column !important;
+	}
+	
+	.kanji-preview-left {
+		padding: 0;
+		width: 100%;
+		text-align: center;
+        text-align: -webkit-center;
+	}	
+
+    .rad-parts-parent {
+        display: flex !important;
+        flex-direction: row !important;
+    }
+
+    .notes.stroke {
+        text-align: center;
+        text-align: -webkit-center;
+    }
+
+    .notes.rad {
+        width: 50%;
+    }
+
+    .notes.parts {
+        width: 50%;
+        padding-right: 20px;
+        text-align: right;
+    }
+	
+	.kanji-preview-left > .d-flex {
+		padding-left: 10px;
+	}
+	
+	.kanji-preview-right {
+        max-width: unset;
+		padding-top: 10px;
+	}
+
+    .notes {
+        padding-left: 10px;
+    }
+
+    .tags.fat {
+        font-size: 15px;
+    }
+
+    .clickable.fat {
+        font-size: 15px;
+    }
+	
+	.stroke-container {
+        max-width: 99vw;
+        padding-left: 1vw;
+	}
+	
+	.on-reading {
+		padding-top: 10px;
+	}
+	
+    .animation-container {
+        padding-left: 15vw !important;
+    }
+
+    .slider {
+        width: 100px;
+        height: 10px;
+    }
+
+    .slider::-webkit-slider-thumb {
+        width: 20px;
+        height: 20px;
+        border-radius: 50%; 
+    }
+
+    .slider::-moz-range-thumb {
+        width: 20px;
+        height: 20px;
+        border-radius: 50%; 
+    }
+
+    .slider-output {
+        margin-left: -10px;
+    }
+
+}
